--- a/css/global/boilerplate.css
+++ b/css/global/boilerplate.css
@@ -21,8 +21,15 @@ body {
     margin: 0;
 }
 
-h1, h2, h3 {
+h1, 
+h2, 
+h3 {line-height: 1.2;
+    font-weight: 800;
     margin: 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 img {
